# duplicate-code-detection-tool

./: README.md  __init__.py  core.py  pyproject.toml  setup.py
examples/: flext_integration_example.py
